# homepage

./: .gitignore  Cargo.toml  Dioxus.toml  Makefile  README.md  README.org
.github/workflows/: dev.yaml  prod.yaml
assets/: main.css
fixtures/cdk/: package-lock.json  package.json
fixtures/cdk/lib/: cdk-stack.ts
src/: main.rs  routes.rs
src/apis/: mod.rs
src/apis/home/: mod.rs
src/apis/users/: mod.rs
src/components/download_popup/: mod.rs
src/components/feature_button/: mod.rs
src/components/filled_button/: mod.rs
src/components/icon_button/: mod.rs
src/components/icons/: mod.rs
src/components/image_card/: mod.rs
src/components/outlined_button/: mod.rs
src/layouts/root_layout/: footer.rs  mod.rs  top_menu.rs
src/models/: mod.rs
src/models/feed/: mod.rs
src/models/highlight_service/: mod.rs
src/models/models/: mod.rs
src/models/service/: mod.rs
src/models/slogan/: mod.rs
src/models/user/: mod.rs
src/pages/home/: controller.rs  dagit_roadmap.rs  feeds.rs  following.rs  members.rs  mod.rs  service_summary.rs  slogan_section.rs  usecases.rs
src/services/: popup_service.rs
