[package]
name = "homepage"
version = "0.1.0"
authors = ["hackartists <hackartists@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }

dioxus = { version = "0.6.0-alpha.2", features = ["fullstack", "router"] }
dioxus-aws = { version = "0.6.0-alpha.2" }

# Debug
dioxus-logger = "0.5.1"
rand = "0.8.5"
getrandom = { version = "0.2.15", features = ["js"], optional = true }

[features]
default = []
server = ["dioxus/axum"]
web = ["dioxus/web", "getrandom"]
lambda = []
